<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/partenza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:text="@string/stazionePartenza">

        <requestFocus />
    </AutoCompleteTextView>

     <AutoCompleteTextView
        android:id="@+id/arrivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" android:text="@string/stazioneArrivo">
    </AutoCompleteTextView>

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/inserisciOra"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TimePicker
         android:id="@+id/orario"
         android:layout_width="wrap_content"
         android:layout_height="140dp" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/inserisciData"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <DatePicker
         android:id="@+id/data"
         android:layout_width="wrap_content"
         android:layout_height="140dp"
         android:calendarViewShown="false"
         android:minDate="" />

     <Button
         android:id="@+id/cerca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/search" android:onClick="cerca" />

</LinearLayout>
